--- a/saga-camel-credit/src/main/resources/application.properties
+++ b/saga-camel-credit/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+quarkus.http.port=8081
+
 quarkus.container-image.registry=docker.io
 quarkus.container-image.group=gpfaltz
 quarkus.container-image.name=saga-camel-credit
 quarkus.container-image.tag=1.0-SNAPSHOT
 
-quarkus.kubernetes.service-type=load-balancer
+#quarkus.kubernetes.service-type=load-balancer
 quarkus.kubernetes-client.trust-certs=true
-
-quarkus.http.port=8081
